--- a/style.css
+++ b/style.css
@@ -5,6 +5,14 @@
     width: 50%;
 }
 img {
-    border-color: 5px solid cornflowerblue;
+    border: 5px solid rgb(11, 11, 11) ;
     
+}
+button {
+    background-color: aquamarine;
+    color: black;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
 }
